fixed spacing

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -4,7 +4,7 @@
 
 .header-container {
   width: 100%;
-  height: 100px;
+  height: 135px;
   .vcenter {
     display: table-cell;
     vertical-align: middle;
